--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -46,12 +46,12 @@ h3 {
 }
 .logo-versus {
     width: 31px;
-    /*position: absolute;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    margin: auto;*/
+    margin: auto;
 }
 
 .logo-team {
