--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -120,5 +120,52 @@ h6 {
     font-size: 10px;
     text-align: right;
     margin-bottom: 4px;
+    margin-right: 17px;
 
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-style {
+    background-color: transparent;
+    border: none;
+    color: #838383;
+}
+
+.circulo {
+    width: 21px;
+    height: 21px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background: #5cb85c;
+    position: relative;
+}
+
+.icon-one{
+    width: 13.5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+.icon-two {
+    width: 21px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+.paragraph {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 30px;
 }
