--- a/src/Componentes/Core/Header.css
+++ b/src/Componentes/Core/Header.css
@@ -8,10 +8,27 @@ header {
     padding-left: 10px;
 }
 
-.menu {
-    color: white;
+.dropdown {
+    position: relative;
+    display: inline-block;
 }
-
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000000;
+    padding-left: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.dropdown-content li {
+    list-style: none;
+    color: #ffffff;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 .toggle-menu {
     display: none;
 }
