--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -20,6 +20,8 @@ h3 {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
+    min-width: 343px;
+    margin: 16px;
 
 }
 
@@ -27,23 +29,14 @@ h3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 343px;
-    height: 72px;
+    min-width: 343px;
+    min-height: 72px;
     border-radius: 5px;
     border: 1px #c4c4c4 solid;
-    margin: auto;
+    margin: 16px;
     position: relative;
 }
-.container-team {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.container-team-two {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
+
 .logo-versus {
     width: 31px;
     position: absolute;
@@ -53,9 +46,26 @@ h3 {
     bottom: 0;
     margin: auto;
 }
+.container-team {
+    min-width: 131px;
+    min-height: 72px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    
+}
+.container-team-two {
+    min-width: 131px;
+    min-height: 72px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 
 .logo-team {
-    width: 30px;
+    width: 34px;
     height: 38px;
 }
 
@@ -64,19 +74,17 @@ h6 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .team-one {
-    margin-right: 20px;
     text-transform: uppercase;
 }
 .team-two {
-    margin-left: 20px;
     text-transform: uppercase;
 }
 .container-end {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    min-width: 343px;
+    margin: 16px;
 }
 
 .btn-ticket {
@@ -128,6 +136,8 @@ h6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 55px;
+    margin-bottom: 45px;
 }
 .btn-style {
     background-color: transparent;
