--- a/src/Componentes/Popup/Popup.css
+++ b/src/Componentes/Popup/Popup.css
@@ -8,12 +8,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    display: none;
 }
 
 .popup-inner {
     position: relative;
     padding: 32px;
-    width: 80%;
+    width: 90%;
     background-color: #fff;
 }
 
