--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -1,181 +1,184 @@
-.container-main {
-    width: 100%;
-    height: 46px;
-    line-height: 46px;
-    background-color: #1F1F1F;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 700;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-h3 {
-    font-size: 18px;
-}
-.logo-bstadium {
-    width: 50px;
-    padding-top: 15px;
-}
-.container-popup {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    min-width: 343px;
-    margin: 16px;
-
-}
-
-.container-matches {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    min-width: 343px;
-    min-height: 72px;
-    border-radius: 5px;
-    border: 1px #c4c4c4 solid;
-    margin: 16px;
-    position: relative;
-}
-
-.logo-versus {
-    width: 31px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
-.container-team {
-    min-width: 131px;
-    min-height: 72px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+@media only screen and (min-width: 375px) {
+    .container-main {
+        width: 100%;
+        height: 46px;
+        line-height: 46px;
+        background-color: #1F1F1F;
+        color: #FFFFFF;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    .logo-bstadium {
+        width: 50px;
+        padding-top: 15px;
+    }
+    .container-popup {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        min-width: 343px;
+        margin: 16px;
+    
+    }
+    
+    .container-matches {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        min-width: 343px;
+        min-height: 72px;
+        border-radius: 5px;
+        border: 1px #c4c4c4 solid;
+        margin: 16px;
+        position: relative;
+    }
+    
+    .logo-versus {
+        width: 31px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .container-team {
+        min-width: 131px;
+        min-height: 72px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        
+        
+    }
+    .container-team-two {
+        min-width: 131px;
+        min-height: 72px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
     
     
-}
-.container-team-two {
-    min-width: 131px;
-    min-height: 72px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-
-.logo-team {
-    width: 34px;
-    height: 38px;
-}
-
-h6 {
+    .logo-team {
+        width: 34px;
+        height: 38px;
+    }
     
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.team-one {
-    text-transform: uppercase;
-}
-.team-two {
-    text-transform: uppercase;
-}
-.container-end {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 343px;
-    margin: 16px;
-}
-
-.btn-ticket {
-    position: relative;
-    width: 207px;
-    height: 39px;
-    border-radius: 4px;
-    border: none;
-    background-color: #33FF99;
+    h6 {
+        
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .team-one {
+        text-transform: uppercase;
+    }
+    .team-two {
+        text-transform: uppercase;
+    }
+    .container-end {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-width: 343px;
+        margin: 16px;
+    }
     
-}
-.btn-display {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.btn-text {
-    width: 157px;
-    margin: 0;
-    color: #000000;
-    font-size: 12px;
-    font-weight: bold;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-.bufanda {
-    width: 10px;
-    height: 12px;
-}
-.progress-bar {
-    width: 107px;
-}
-.progress-bar-text {
-    font-weight: 600;
-    color: #838383;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.date {
-    color: #838383;
-    font-size: 10px;
-    text-align: right;
-    margin-bottom: 4px;
-    margin-right: 17px;
-
-}
-
-.buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 55px;
-    margin-bottom: 45px;
-}
-.btn-style {
-    background-color: transparent;
-    border: none;
-    color: #838383;
-}
-
-.circulo {
-    width: 21px;
-    height: 21px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    background: #5cb85c;
-    position: relative;
-}
-
-.icon-one{
-    width: 13.5px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
-.icon-two {
-    width: 21px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
-.paragraph {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 30px;
+    .btn-ticket {
+        position: relative;
+        width: 207px;
+        height: 39px;
+        border-radius: 4px;
+        border: none;
+        background-color: #33FF99;
+        
+    }
+    .btn-display {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .btn-text {
+        width: 157px;
+        margin: 0;
+        color: #000000;
+        font-size: 12px;
+        font-weight: bold;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    }
+    .bufanda {
+        width: 10px;
+        height: 12px;
+    }
+    .progress-bar {
+        width: 107px;
+    }
+    .progress-bar-text {
+        font-weight: 600;
+        color: #838383;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .date {
+        color: #838383;
+        font-size: 10px;
+        text-align: right;
+        margin-bottom: 4px;
+        margin-right: 17px;
+    
+    }
+    
+    .buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 55px;
+        margin-bottom: 45px;
+    }
+    .btn-style {
+        background-color: transparent;
+        border: none;
+        color: #838383;
+    }
+    
+    .circulo {
+        width: 21px;
+        height: 21px;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+        background: #5cb85c;
+        position: relative;
+    }
+    
+    .icon-one{
+        width: 13.5px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .icon-two {
+        width: 21px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .paragraph {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+   
 }
