--- a/src/Componentes/Core/Footer.css
+++ b/src/Componentes/Core/Footer.css
@@ -5,9 +5,18 @@
     padding-top: 25px;
     padding-bottom: 25px;
 }
-
+.footer-header {
+        margin: -45px;  
+        height: 40px;
+        background-color: #34FA98;
+        -webkit-transform: rotate(-3deg);
+        -ms-transform: rotate(-3deg);
+        transform: rotate(-3deg);
+      
+}
 .footer-first {
     padding-left: 0px;
+    margin-top: 75px;
     margin: 10px;
 }
 .footer-stars {
@@ -29,6 +38,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    font-weight: 700;
 }
 
 h4 {
@@ -53,4 +63,7 @@ img {
 .parr-one {
     margin-top: -8px;
     padding-bottom: 25px;
+}
+.text-green {
+    color: #34FA98;
 }
