--- a/src/Componentes/Core/Header.css
+++ b/src/Componentes/Core/Header.css
@@ -1,38 +1,64 @@
-header {
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 59px;
-    padding-right: 10px;
-    padding-left: 10px;
-}
+@media only screen and (min-width: 375px) {
+    header {
+        background-color: black;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 59px;
+        padding-right: 10px;
+        padding-left: 10px;
+        min-width: 375px;
+    }
+    
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #000000;
+        padding-left: 0;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .dropdown-content li {
+        list-style: none;
+        color: #ffffff;
+    }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    .toggle-menu {
+        display: none;
+    }
+    
+    .image-logo{
+        min-width: 137px;
+    }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
 }
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #000000;
-    padding-left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.dropdown-content li {
-    list-style: none;
-    color: #ffffff;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.toggle-menu {
-    display: none;
-}
+/*DESKTOP*/
+@media screen and (min-width: 860px) {
+    header {
+        min-width: 860px;
+        height: 112px;
+    }
+    .dropdown{
+        display: none;
+    }
+    .container-desktop {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .image-logo{
+        min-width: 280px;
+    }
 
-.image-logo{
-    min-width: 137px;
 }
