--- a/src/Componentes/Landing/Landing.css
+++ b/src/Componentes/Landing/Landing.css
@@ -113,4 +113,17 @@
         width: 100%;
         
     }
+    .container-par-main {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        position: relative;
+    
+    }
+    .container-par {
+        width: 370px;
+        height: 120px;
+        font-size: 16px;
+    }
 }
