--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 859px) {
     .container-main {
         width: 100%;
         height: 46px;
@@ -180,6 +180,10 @@
         align-items: center;
         margin-bottom: 30px;
     }
+    .date-desktop {
+        display: none;
+    }
+    
    
 }
 
@@ -187,19 +191,30 @@
 /*DESKTOP*/
 @media screen and (min-width: 860px) {
     .container-main {
-        margin: auto;
-        width: 96%;
+        width: 100%;
+        height: 46px;
+        line-height: 46px;
+        background-color: #1F1F1F;
+        color: #FFFFFF;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    .logo-bstadium {
+        width: 50px;
+        padding-top: 15px;
     }
     .container-popup {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-    }
-
-    .container-popup-right{
-        display: flex;
-        align-items: center;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        min-width: 343px;
+        margin: 16px;
+    
     }
     .paragraph {
         margin-bottom: 0;
@@ -207,4 +222,174 @@
     .logo-bstadium {
         padding-top: 4px;
     }
+    .container, .progress-bar, .date{
+        display: none;
+    }
+
+    .container-desktop{
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        position: relative;
+    }
+    .bar-desktop {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 205px;
+        margin-top: 5px;
+        position: relative;
+    }
+    .end-desktop {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+        position: relative;
+        min-width: 205px;
+        margin-right: 16px;
+    }
+    .date-desktop{
+        width: 205px;
+        color: #000000;
+        font-size: 14px;
+        margin-bottom: 5px;
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 55px;
+        margin-bottom: 45px;
+    }
+    .btn-style {
+        background-color: transparent;
+        border: none;
+        color: #838383;
+    }
+    
+    .circulo {
+        width: 21px;
+        height: 21px;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+        background: #5cb85c;
+        position: relative;
+    }
+    
+    .icon-one{
+        width: 13.5px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .icon-two {
+        width: 21px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .container-matches {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        min-width: 580px;
+        min-height: 76px;
+        border-radius: 5px;
+        border: 1px #c4c4c4 solid;
+        margin: 16px;
+        position: relative;
+    }
+    
+    .logo-versus {
+        width: 31px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+    .container-team {
+        min-width: 131px;
+        min-height: 72px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        
+        
+    }
+    .container-team-two {
+        min-width: 131px;
+        min-height: 72px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    
+    .logo-team {
+        width: 34px;
+        height: 38px;
+    }
+    
+    h6 {
+        
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    .team-one {
+        text-transform: uppercase;
+    }
+    .team-two {
+        text-transform: uppercase;
+    }
+
+    .btn-ticket {
+        position: relative;
+        width: 207px;
+        height: 39px;
+        border-radius: 4px;
+        border: none;
+        background-color: #33FF99;
+        
+    }
+    .btn-display {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .btn-text {
+        width: 157px;
+        margin: 0;
+        color: #000000;
+        font-size: 12px;
+        font-weight: bold;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    }
+    .bufanda {
+        width: 10px;
+        height: 12px;
+    }
+    .progress-bar {
+        width: 107px;
+    }
+    .progress-bar-text {
+        font-weight: 600;
+        color: #838383;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    
 }
