--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -183,6 +183,9 @@
     .date-desktop {
         display: none;
     }
+    a{
+        text-decoration: none;
+    }
     
    
 }
@@ -257,6 +260,9 @@
         position: relative;
         display: flex;
         justify-content: flex-end;
+    }
+    a {
+        text-decoration: none;
     }
     .buttons {
         display: flex;
