--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -34,7 +34,7 @@
         min-height: 72px;
         border-radius: 5px;
         border: 1px #c4c4c4 solid;
-        margin: 16px;
+        margin: 4px 16px 4px 16px;
         position: relative;
     }
     
