--- a/src/Componentes/Core/Header.css
+++ b/src/Componentes/Core/Header.css
@@ -33,10 +33,17 @@
         color: #ffffff;
         margin: 5px;
         padding: 10px 20px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
         
+    }
+    .dropdown-content li img {
+        width: 24px;
     }
     .dropdown-content li a {
         text-decoration: none;
+        margin-left: 25px;
     }
     .dropdown-content li:hover{
         background-color: gray;
@@ -48,6 +55,7 @@
         padding-left:20px;
         font-size: 30px;
     }
+    
     .cart-icon {
         font-size: 30px;
         padding-right: 20px;
