--- a/src/Componentes/Core/Footer.css
+++ b/src/Componentes/Core/Footer.css
@@ -9,6 +9,26 @@
         width: 100%;
 
     }
+   
+    .dropdown-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .dropdown-menu p {
+        font-size: 20px;
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #000000;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        margin-top: 0;
+        margin-bottom: 0;
+        width: 100vw;
+        
+    }
     
     .footer-first {
         padding-left: 0px;
