--- a/src/Componentes/Core/Header.css
+++ b/src/Componentes/Core/Header.css
@@ -61,7 +61,7 @@
         padding-right: 20px;
         color: #ffffff;
     }
-    .toggle-menu {
+    .toggle-menu, .header-icons {
         display: none;
     }
     
@@ -87,12 +87,35 @@
    
     .image-logo{
         min-width: 280px;
-        padding-left: 20px;
+        padding-left: 50px;
     }
     .cart-icon {
-        font-size: 30px;
+        display: none;
+    }
+    .header-icons{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-right: 100px;
+    }
+    .flag-icons {
+        display: block;
+        line-height: normal;
         padding-right: 20px;
     }
-    
+    .image-icon, a {
+        padding: 20px;
+        min-width: 40px;
+        font-size: 30px;
+    }
+    .image-icon-flag-one{
+        min-width: 30px;
+        padding-bottom: 5px;
+    }
+    .image-icon-flag-two{
+        min-width: 3px;
+        padding-top: 5px;
+    }
+
 
 }
