--- a/src/Componentes/Core/Header.css
+++ b/src/Componentes/Core/Header.css
@@ -103,7 +103,7 @@
         line-height: normal;
         padding-right: 20px;
     }
-    .image-icon, a {
+    .image-icon {
         padding: 20px;
         min-width: 40px;
         font-size: 30px;
