--- a/src/Componentes/Core/Footer.css
+++ b/src/Componentes/Core/Footer.css
@@ -33,6 +33,7 @@
         width: 100vw;
         
     }
+    
     .dropdown-content li {
         font-size: 16px;
         font-weight: lighter;
@@ -106,7 +107,7 @@
     }
     .wasap-logo {
         width: 60px;
-        position: absolute;
+        position: fixed;
         bottom: 2px;
         right: 5px;
     }
