--- a/src/Componentes/Core/Footer.css
+++ b/src/Componentes/Core/Footer.css
@@ -34,7 +34,7 @@
         
     }
     
-    .dropdown-content li {
+    .dropdown-bbb li {
         font-size: 16px;
         font-weight: lighter;
         list-style: none;
