--- a/src/Componentes/Landing/Matches/Matches.css
+++ b/src/Componentes/Landing/Matches/Matches.css
@@ -30,7 +30,6 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        min-width: 343px;
         min-height: 72px;
         border-radius: 5px;
         border: 1px #c4c4c4 solid;
@@ -90,7 +89,7 @@
     
     .btn-ticket {
         position: relative;
-        width: 207px;
+        /*width: 207px;*/
         height: 39px;
         border-radius: 4px;
         border: none;
@@ -115,9 +114,9 @@
         width: 10px;
         height: 12px;
     }
-    .progress-bar {
+    /*.progress-bar {
         width: 107px;
-    }
+    }*/
     .progress-bar-text {
         font-weight: 600;
         color: #838383;
@@ -243,9 +242,8 @@
     }
 
     .container-desktop{
-        flex-wrap: wrap;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
     
@@ -253,11 +251,11 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        min-width: 860px;
+        width: 100%;
         min-height: 98px;
         border-radius: 5px;
         border: 1px #c4c4c4 solid;
-        margin: 8px 8px 0px 8px;
+        margin: 8px 8px 0px 12px;
         position: relative;
     }
 
@@ -266,8 +264,8 @@
         flex-direction: column-reverse;
         justify-content: flex-start;
         position: relative;
-        min-width: 205px;
-        margin-right: 8px 0px 8px 8px;
+        /*min-width: 205px;*/
+        margin: 8px 12px 8px 8px;
     }
 
     .bar-desktop {
@@ -349,7 +347,7 @@
         margin: auto;
     }
     .container-team {
-        min-width: 131px;
+        /*min-width: 131px;*/
         min-height: 72px;
         display: flex;
         justify-content: space-evenly;
@@ -358,7 +356,7 @@
         
     }
     .container-team-two {
-        min-width: 131px;
+        /*min-width: 131px;*/
         min-height: 72px;
         display: flex;
         justify-content: space-evenly;
@@ -369,6 +367,7 @@
     .logo-team {
         width: 34px;
         height: 38px;
+        margin: auto 20px;
     }
     
     h6 {
@@ -376,15 +375,17 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .team-one {
+        margin: auto 18px;
         text-transform: uppercase;
     }
     .team-two {
+        margin: auto 18px;
         text-transform: uppercase;
     }
 
     .btn-ticket {
         position: relative;
-        width: 207px;
+        /*width: 207px;*/
         height: 39px;
         border-radius: 4px;
         border: none;
